--- a/todo.txt
+++ b/todo.txt
@@ -1,30 +1,25 @@
-(A) due:2017.05.02  @home do some job
-due:2017.05.02 +java @work testJava
-(B) due:2017.05.03 hw
-due:2017.05.09 @work +vim test1
-(C) due:2017.06.01 one work
-mit add tuesday add @work +time go to
-t:2017-05-02 {2017.05.02}
-t:{2017-05-02} send xinran
-(A) {2017.10.00} finish paper @F708 +mulAxis
-{2017.Q2.00} increase your profit
-{2017.05.05} go to shopping @meilian +multi
-@phone Daddy
-{2018.00.00} @beijing +life make wedding with XinRan
-(A) {2017.05.04}  @F708 +multiAxis finish drawing dyanmic inflow mesh 
-(A) {2017.05.07}  @F708 +multiAxis finish drawing nacelle yawing mesh
-(B) {2017.05.08} @FengTai +life install clean water machine and take high pressure pat
-@phone Xinran
-(B) {2017.05.16} @F708 +multiAxis Learn and use CaD to draw your design picture
-(B) {2017.06.02} @F708 +multiAxis Learn UG to utilize the UG8.0 folders By LiXinkai
-{2019.00.00} @beijing +graduate Finish four papers required by NCEPU
-{2017.Q2.00} @F708 +multiAxis do summary for the yaw wind turbine
-{2017.Q3.00} @F708 +multiAxis do some fortran tests for the FVM with FAST for dynamic pitch
-{2019.00.00} @beijing +graduate writing the graduate thesis for my Doctor major in fluid mechanic
-{2020.00.00} @beijing +work search my job about the wind turbine or some coding work
-{2017.05.09} @F708
-{2017.06.00} @F708 +multiAxis writing the yaw report for Mr Kang with dedicately
-{2017.05.23} @F708 +graduate inform WangNanMan to submit the undergraduate thesis
-{2017.05.04} @F708 +graduate talk with WangNanMan to add an interface to my Project
-{2017.00.00} @F708 +multiAxis finish the CFD simultion with paper result and do some coding about FVM
-{2017.05.04} @Subway +multiAxis read the paper about the wind turbine yaw
+fuck due:2017.05.02  @home do some job fuck 
+(A) {2017.10.00} finish paper @f708 +mulAxis  t:2017-10-01
+{2017.Q2.00} increase your profit  t:2017-04-01
+{2017.05.05} go to shopping @meilian +multi  t:2017-05-05
+@phone Daddy 
+{2018.00.00} @beijing +life make wedding with XinRan  t:2018-01-01
+(A) {2017.05.04}  @f708 +multiAxis finish drawing dyanmic inflow mesh   t:2017-05-04
+(A) {2017.05.07}  @f708 +multiAxis finish drawing nacelle yawing mesh  t:2017-05-07
+(B) {2017.05.08} @FengTai +life install clean water machine and take high pressure pat  t:2017-05-08
+@phone Xinran 
+(B) {2017.05.16} @f708 +multiAxis Learn and use CaD to draw your design picture  t:2017-05-16
+(B) {2017.06.02} @f708 +multiAxis Learn UG to utilize the UG8.0 folders By LiXinkai  t:2017-06-02
+{2019.00.00} @beijing +graduate Finish four papers required by NCEPU  t:2019-01-01
+{2017.Q2.00} @f708 +multiAxis do summary for the yaw wind turbine  t:2017-04-01
+{2017.Q3.00} @f708 +multiAxis do some fortran tests for the FVM with FAST for dynamic pitch  t:2017-07-01
+{2019.00.00} @beijing +graduate writing the graduate thesis for my Doctor major in fluid mechanic  t:2019-01-01
+(B) {2020.00.00} @beijing +work search my job about the wind turbine or some coding work  t:2020-01-01
+{2017.06.00} @f708 +multiAxis writing the yaw report for Mr Kang with dedicately  t:2017-06-01
+{2017.05.23} @f708 +graduate inform WangNanMan to submit the undergraduate thesis  t:2017-05-23
+{2017.05.04} @f708 +graduate talk with WangNanMan to add an interface to my Project  t:2017-05-04
+{2017.00.00} @f708 +multiAxis finish the CFD simultion with paper result and do some coding about FVM  t:2017-01-01
+{2017.05.04} @Subway +multiAxis read the paper about the wind turbine yaw  t:2017-05-04
+{2017.06.03} @f708 +multiAxis Learn to use PROE  t:2017-06-03
+{2017.05.00} @f708 +multiAxis Practice writing the yawing paper about WT and do some java source coding ,deep learning maven and springboot project ,and also keetle  t:2017-05-01
+{2017.05.05} @f708 +multiAxis accelerate the post matlab code  t:2017-05-05
